feat: Agregar task limpiar docker

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -40,3 +40,7 @@
       ansible.builtin.shell:
         cmd: "docker compose up -d"
         chdir: "{{ remote_folder }}"
+    
+    - name: Clean docker
+      ansible.builtin.shell:
+        cmd: "docker system prune -a -f"
