--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8001:8001"
     env_file:
-      - .env.staging
+      - .env
     restart: unless-stopped
     networks:
       - coco-network
