--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,9 +1,9 @@
 services:
   coco-salvaje-integraciones:
-    image: coco-salvaje-integraciones-api:latest
-    container_name: coco-salvaje-integraciones-api
+    image: integraciones-api:development
+    container_name: integraciones-api-development
     ports:
-      - "8003:8003"
+      - "8003:8000"
     env_file:
       - .env
     restart: unless-stopped
