--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,9 +1,9 @@
 services:
   coco-salvaje-integraciones:
-    image: coco-salvaje-integraciones-api:latest
-    container_name: coco-salvaje-integraciones-api
+    image: integraciones-api:staging
+    container_name: integraciones-api-staging
     ports:
-      - "8001:8001"
+      - "8001:8000"
     env_file:
       - .env
     restart: unless-stopped
