--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   coco-salvaje-integraciones:
-    image: coco-salvaje-integraciones-api:latest
-    container_name: coco-salvaje-integraciones-api
+    image: integraciones-api:latest
+    container_name: integraciones-api
     ports:
       - "8000:8000"
     env_file:
