--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -2,6 +2,7 @@ services:
   coco-salvaje-integraciones:
     image: integraciones-api:staging
     container_name: integraciones-api-staging
+    user: "1001:1001"
     ports:
       - "8001:8000"
     env_file:
@@ -9,6 +10,8 @@ services:
     restart: unless-stopped
     networks:
       - coco-network
+    volumes:
+      - ./logs:/app/logs
 
 networks:
   coco-network:
