fix: Sincronizar inventario con SKU

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -8,7 +8,7 @@
       git_branch: "{{ git_branch | default('main') }}"
       image_tag: "{% if git_branch == 'main' %}latest{% else %}{{ git_branch }}{% endif %}"
       local_image_path: "{{ playbook_dir }}/../build/integraciones-api-{{ image_tag }}.tar"
-      local_env_path: "{{ playbook_dir }}/../{% if git_branch == 'main' %}.env{% else %}.env.{{ git_branch }}{% endif %}"
+      local_env_path: "{{ playbook_dir }}/../{% if git_branch == 'main' %}.env.production{% else %}.env.{{ git_branch }}{% endif %}"
       local_compose_path: "{{ playbook_dir }}/../docker-compose{% if git_branch != 'main' %}.{{ git_branch }}{% endif %}.yml"
       image_name: "integraciones-api:{{ image_tag }}"
       remote_folder: "/home/coco/images/backend/integraciones/{{ git_branch }}"
