--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "ansible.python.interpreterPath": "/home/david/python/venv/bin/python"
+    "ansible.python.interpreterPath": "/home/david/python/venv/bin/python",
+    "editor.fontFamily": "Cascadia Code",
+    "editor.fontLigatures": true,
 }
