feat: Cambiar pip por uv en docker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "argon2-cffi",
     "pyjwt",
     "apscheduler",
-    "python-dateutil"
+    "python-dateutil",
+    "holidays_co"
 ]
