feat: title components

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,6 @@ dependencies = [
     "pyjwt",
     "apscheduler",
     "python-dateutil",
-    "holidays_co"
+    "holidays_co",
+    "playwright"
 ]
