--- a/.gitignore
+++ b/.gitignore
@@ -204,4 +204,7 @@ shopify_orders.json
 # Scripts
 scripts/
 
+# AI
+.agent/
+
 # End of https://www.toptal.com/developers/gitignore/api/venv,python
