--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
     "python-dateutil",
     "holidays_co",
     "playwright",
-    "pandas-stubs"
+    "pandas-stubs",
+    "google-genai",
 ]
