fix: quitar raise_for_status BaseClient

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,7 @@ dependencies = [
     "holidays_co",
     "pandas-stubs",
     "google-genai",
+    "authlib",
+    "starlette",
+    "itsdangerous",
 ]
