fix: asegurar que existan ficheros de credenciales

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=720
 SHOP_SHOPIFY=tu-tienda-shopify
 SHOP_VERSION=2025-07
 API_KEY_SHOPIFY=tu_api_key_de_shopify
+
+# === Google Cloud & Logs ===
+# GOOGLE_APPLICATION_CREDENTIALS=/credentials/integraciones-coco.json
+# LOGS_DIR=/logs
