--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ dependencies = [
     "dotenv",
     "argon2-cffi",
     "pyjwt",
-    "apscheduler",
     "python-dateutil",
     "holidays_co",
     "pandas-stubs",
+    "google-auth",
     "google-genai",
     "authlib",
     "starlette",
