--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,6 +10,7 @@
       local_image_path: "{{ playbook_dir }}/../build/integraciones-api-{{ image_tag }}.tar"
       local_env_path: "{{ playbook_dir }}/../{% if git_branch == 'main' %}.env.production{% else %}.env.{{ git_branch }}{% endif %}"
       local_compose_path: "{{ playbook_dir }}/../docker-compose{% if git_branch != 'main' %}.{{ git_branch }}{% endif %}.yml"
+      local_credentials_path: "{{ playbook_dir }}/../credentials/integraciones-coco.json"
       image_name: "integraciones-api:{{ image_tag }}"
       remote_folder: "/home/coco/images/backend/integraciones/{{ git_branch }}"
 
@@ -24,6 +25,20 @@
         ansible.builtin.copy:
             src: "{{ local_env_path }}"
             dest: "{{ remote_folder }}/.env"
+            mode: "0600"
+
+      - name: Ensure app/credentials directory exists
+        ansible.builtin.file:
+            path: "{{ remote_folder }}/credentials"
+            state: directory
+            mode: "0755"
+            owner: "{{ ansible_user }}"
+            group: "{{ ansible_user }}"
+
+      - name: Send GCP Credentials
+        ansible.builtin.copy:
+            src: "{{ local_credentials_path }}"
+            dest: "{{ remote_folder }}/credentials/integraciones-coco.json"
             mode: "0600"
 
       - name: Send docker compose file
