--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -11,7 +11,8 @@ services:
     networks:
       - coco-network
     volumes:
-      - ./logs:/app/logs
+      - ./logs:/logs
+      - ./credentials:/credentials
 
 networks:
   coco-network:
