feat: refactor scripts

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,38 @@
-# Configuración de variables de entorno para Coco Salvaje Inventarios
-# Copia este archivo como .env y configura los valores según tu entorno
+# Base de datos
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-# === Configuración de Base de Datos ===
-DB_HOST=tu-servidor-de-base-de-datos
-DB_PORT=5432
-DB_USER=tu_usuario
-DB_PASSWORD=tu_contraseña_segura
-DB_NAME=tu_nombre_de_base_de_datos
-
-# === Configuración de Aplicación ===
-ENVIRONMENT=development
+# Environment
+ENVIRONMENT=production
 LOCAL_TIMEZONE=America/Bogota
+SECRET_KEY=
 
-# === Configuración de Seguridad ===
-SECRET_KEY=tu_clave_secreta_muy_segura_de_al_menos_32_caracteres
+#Shopify
+SHOP_SHOPIFY=
+SHOP_VERSION=2025-10
+API_KEY_SHOPIFY=
+WEBHOOK_SECRET_SHOPIFY=
+
+# Security
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=720
+ADMIN_PWD=
 
-# === Configuración de Shopify ===
-SHOP_SHOPIFY=tu-tienda-shopify
-SHOP_VERSION=2025-07
-API_KEY_SHOPIFY=tu_api_key_de_shopify
+# World Office
+WO_API_KEY=
+WO_API_VERSION=v1
+WO_PREFIJO=13
+WO_CONCEPTO="Factura de venta"
 
-# === Google Cloud & Logs ===
-# GOOGLE_APPLICATION_CREDENTIALS=/credentials/integraciones-coco.json
-# LOGS_DIR=/logs
+# Addi
+ADDI_API_VERSION=v1
+
+# Logs
+LOGS_DIR=/home/user/logs
+
+# Google
+GEMINI_API_KEY=
+GOOGLE_CREDENTIALS=credentials.json
