--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,17 +2,11 @@
 - name: Deploy server
   hosts: hostinger
   vars:
-      # La variable git_branch se pasa como un extra-var desde el script de shell
-      # y se usa para construir los nombres de archivos y tags.
-      # Si no se provee, el valor por defecto será 'main'.
-      git_branch: "{{ git_branch | default('main') }}"
-      image_tag: "{% if git_branch == 'main' %}latest{% else %}{{ git_branch }}{% endif %}"
-      local_image_path: "{{ playbook_dir }}/../build/integraciones-api-{{ image_tag }}.tar"
-      local_env_path: "{{ playbook_dir }}/../{% if git_branch == 'main' %}.env.production{% else %}.env.{{ git_branch }}{% endif %}"
-      local_compose_path: "{{ playbook_dir }}/../docker-compose{% if git_branch != 'main' %}.{{ git_branch }}{% endif %}.yml"
+      local_image_path: "{{ playbook_dir }}/../build/integraciones-api-latest.tar"
+      local_env_path: "{{ playbook_dir }}/../.env.production"
+      local_compose_path: "{{ playbook_dir }}/../docker-compose.yml"
       local_credentials_path: "{{ playbook_dir }}/../credentials/integraciones-coco.json"
-      image_name: "integraciones-api:{{ image_tag }}"
-      remote_folder: "/home/coco/images/backend/integraciones/{{ git_branch }}"
+      remote_folder: "/home/coco/ServerIntegraciones"
 
   tasks:
       - name: Send docker-image
